--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "koa-route": "^3.2.0",
     "sharp": "^0.22.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.26.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
