--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "koa": "^2.7.0",
     "koa-route": "^3.2.0",
-    "sharp": "^0.22.1"
+    "sharp": "^0.22.1",
+    "koa-body": "^4.1.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.5",
-    "koa-body": "^4.1.0"
+    "browser-sync": "^2.26.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
