--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "koa-route": "^3.2.0",
     "sharp": "^0.22.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "codecov": "^3.5.0",
+    "jest": "^24.8.0",
+    "supertest": "^4.0.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest && codecov"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "repository": {
     "type": "git",
