--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -5,5 +5,5 @@ update_configs:
     update_schedule: "live"
     default_reviewers:
       - "hideo54"
-    default_asignees:
+    default_assignees:
       - "hideo54"
