--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "hideo54",
   "license": "MIT",
   "dependencies": {
+    "@fastify/http-proxy": "^9.2.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2"
   },
